# mlops_02476_project

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloud_test.py  cloudbuild_containers.yaml  config_gpu.yaml  data.dvc  project_tree.txt  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_frontend.txt  requirements_gpu.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: codecheck.yaml  pre-commit.yaml  tests.yaml
.vertexai/: config_cpu.yaml
configs/: predict_labels.json
dockerfiles/: api.dockerfile  dtumlops_baseimage.dockerfile  gcloud_api.dockerfile  gcloud_frontend.dockerfile  mlopsdtu_local_train.dockerfile  train.dockerfile  train_gpu.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md  report.html
src/mlops_project_tcs/: api.py  crop_img.py  data.py  evaluate.py  frontend.py  locust_load.py  model.py  onnx_to_gcloud.py  test.py  train.py  utils.py  vae_evaluate.py  vae_model.py  vae_train.py  vgg_train.py
src/mlops_project_tcs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mlops_project_tcs/config/: default_config.yaml  test_config.yaml
src/mlops_project_tcs/config/experiment/: exp1.yaml  exp2.yaml  exp3.yaml  test_exp.yaml
src/mlops_project_tcs/config/experiment/dataset/: kaggle_brain.yaml  mnist.yaml
src/mlops_project_tcs/config/experiment/model/: vae_small.yaml  (+3 more)
src/mlops_project_tcs/config/profiling/: evaluation.yaml  full.yaml  no_profiling.yaml  training.yaml
src/mlops_project_tcs/config/wandbconf/: default_wandb.yaml
src/mlops_project_tcs/sweeps/: sweep.yaml
tests/: __init__.py  test_data.py  test_data_loading.py  test_data_processing.py  test_download_data.py  test_model.py  test_train.py
(+1 files in other folders)
