[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops_project_tcs"
version = "0.0.1"
description = "MLOps project from the DTU course '02476 - Machine Learning Operations' TODO(UPDATE WITH INFORMATION ABOUT WHAT THE PROJECT DOES)"
authors = [
  { name = "thomas", email = "tamstamsthomas@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "config-3.py"]
